@page RN24 Release notes for PAPILO 2.4

@section RN241 PaPILO 2.4.1

Fixed bugs
----------

- SparseStorage: Determine end pointers without behind last accesses

Build system
------------

- improved search for dependencies when another tool uses papilo-config.cmake
- upgrade the unit testing framework catch from 2.13.8 to 3.7

@section RN240 PaPILO 2.4.0

Interface changes
-----------------

### Changed parameters

- presolve.abortfac = 0.00080000000000000004: abort factor of weighted number of reductions for exhaustive presolving
- presolve.lpabortfac = 0.01: abort factor of weighted number of reductions for exhaustive LP presolving

### New parameters with default values

- numerics.useabsfeas = 1: whether to use an absolute tolerance for feasibility checks
- presolve.abortfacfast = 0.00080000000000000004: abort factor of weighted number of reductions for fast presolving
- presolve.abortfacmedium = 0.00080000000000000004: abort factor of weighted number of reductions for medium presolving
- presolve.lpabortfacfast = 0.01: abort factor of weighted number of reductions for fast LP presolving
- presolve.lpabortfacmedium = 0.01: abort factor of weighted number of reductions for medium LP presolving

Build system
------------

- updated FindTBB
- revised the CMake configuration to export the PaPILO dependencies (papilo-config.cmake)


Fixed bugs
----------

- all fast presolvers: maintain changed activities of current and last round to avoid missing reductions
- FixContinuous: only fix column which contribution deviates by at most epsilon in every row
- Components: identify fixing a component to an optimal solution as strong dual reduction

@page RN23 Release notes for PAPILO 2.3

@section RN231 PaPILO 2.3.1

Fixed bugs
----------

- DominatedCols: compress set of dominations topologically to avert memory exhaustions
- Input and Output: handle floating point numbers precisely in parsers and writers
- OPB-Parser: handle additional whitespaces