@@ -12,6 +12,7 @@ Build system
 
 - improved search for dependencies when another tool uses papilo-config.cmake
 - upgrade the unit testing framework catch from 2.13.8 to 3.7
+- compile the binary with gfortran when clusol is used
 
 @section RN240 PaPILO 2.4.0
 
